# cynapse

./: .gitignore  .travis.yml  README.md
src/: CMakeLists.txt  Functions.hpp  MatrixUtils.cpp  MatrixUtils.h  NeuralNetwork.cpp  NeuralNetwork.h  Types.h  main.cpp
src/core/: CMakeLists.txt  Functions.hpp  NeuralNetwork.cpp  Types.h
src/models/: .mnist.cpp.swp  CMakeLists.txt  mnist.cpp  mnist.h
src/test/: CMakeLists.txt  FunctionsTest.cpp  MatrixUtilsTest.cpp  NeuralNetworkTest.cpp  TestsCatchRequire.h
src/tools/: BatchDatasetDescriptor.cpp  BatchDatasetDescriptor.h  BatchImageLoader.cpp  BatchImageLoader.h  CMakeLists.txt  DatasetDescriptor.cpp  DatasetDescriptor.h
